[package]
name = "optfield"
version = "0.1.0"
authors = ["Robert Ignat <robert.ignat91@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.2"
proc-macro2 = "1.0.9"

[dependencies.syn]
version = "1.0.16"
features = ["full", "extra-traits"]

[dev-dependencies]
paste = "0.1.8"
