[package]
name = "optfield"
version = "0.1.0"
license = "MIT OR Apache-2.0"
description = "A macro that generates structs with optional fields"
repository = "https://github.com/roignpar/optfield"
readme = "README.md"
authors = ["Robert Ignat <robert.ignat91@gmail.com>"]
keywords = ["struct", "field", "optional", "option"]
categories = ["rust-patterns"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.3"
proc-macro2 = "1.0.10"

[dependencies.syn]
version = "1.0.17"
features = ["full", "extra-traits"]

[dev-dependencies]
paste = "0.1.10"
version-sync = "0.9.0"

[dev-dependencies.serde]
version = "1.0.106"
features = ["derive"]
